[package]
name = "signal-locate"
description = "A tool to create a heatmap of wifi signal strength."
repository = "https://github.com/simon0302010/signal-locate"
readme = "README.md"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
wifiscanner = "0.5.*"
chrono = "0.4.*"
fltk = "1.5.*"
rand = "0.9.*"
image = "0.25.*"
colorgrad = "0.7.*"